# docflow-engine

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  constants.py  dag.py  db.py  errors.py  logging_config.py  main.py  storage.py
app/api/: documents.py  error_handlers.py  middleware.py  runs.py  schemas.py  workflows.py
app/bus/: __init__.py  base.py  factory.py  kafka.py  memory.py
app/ingestion/: base.py  service.py  upload.py
app/models/: __init__.py  document.py  enums.py  events.py  run.py  workflow.py
app/runs/: service.py
app/trigger/: handler.py  resolver.py
tests/: conftest.py  test_step1_foundation.py  test_step2_api.py  test_step3_trigger.py
